2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_1_2

	* test/mem_test.sh :

	  - Added memory test script.

	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added a new --enable-memtest option to compile the alternate
	    memory allocator/deallocator functions and classes.

	* lib/Makefile.in :

	  - Now compiles mem.cpp

	* lib/list.h :
	* lib/mapper.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/smwrap.h :
	* lib/symtab.h :

	  - Classes in these files now inherits from vlad_mem.

	* lib/mem.h :
	* lib/mem.cpp :

	  - If configured with --enable-memtest, the special new/malloc/etc.
	    wrapper functions will be compiled. Each of these wrappers dumps
	    the mem address to stderr before alloc/deallocing memory.

	* lib/expression.cpp :
	* lib/seqtab.cpp :
	* lib/smwrap.cpp :
	* lib/stringlist.cpp :
	* lib/updatetab.cpp :
	* lib/wrapper.cpp :

	  - Cleanup: renamed those silly variable names that is prefixed with
	    _tmp.

	* lib/polbase.cpp :

	  - Added delete() calls for the tmp expressions used in the generation
	    of policy update rules.

2005-12-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_1_1

	* README :
	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added an --enable-timer option to enable the timer function.

	* main/agent.y :
	* main/parser.h :
	* main/vlad.cpp :

	  - Added a -t option in the main program to measure the time it takes
	    for the compute and query operations to complete.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - compute_generate() now dumps the actual facts, and not some unique
	    id.

2005-12-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/smwrap.cpp :

	  - Disabled smodels output in debug mode.

	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/mapper.cpp :
	* lib/mapper.h :

	  - Moved all complex computation algorithims for mapping facts to
	    integers into the mapper class.

	* lib/Makefile.in :
