@@ -1,5 +1,14 @@
 2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/numberlist.cpp :
+	* lib/numberlist.h :
+	* lib/stringlist.cpp :
+	* lib/stringlist.h :
+
+	  - Name cleanup: vlad_{string|number} -> vlad_{string|number}list_item
+
+2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
 	* Tagged vlad-1_1_2
 
 	* test/mem_test.sh :
